k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xtok-backend-service
spec:
  selector:
    app: xtok-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 22001
  type: LoadBalancer
